--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <style>
     canvas{
-      background-color: blue;
+      background-color: #6066E8;
     }
   </style>
 </head>
